fix .opener aside
The issue occurs because 100vw includes the width of the vertical scrollbar, while the container's width excludes it. This causes the element to be slightly too wide, forcing a horizontal scrollbar.

--- a/assets/scss/ui/opener.scss
+++ b/assets/scss/ui/opener.scss
@@ -23,7 +23,7 @@
     height: 100%;
     top: 0;
     left: 50%;
-    width: calc(100vw - 50%);
+    width: 50%;
     display: flex;
     justify-content: flex-end;
     align-items: center;
